# py-iku

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.md  bayesian-course-generation-prompt.md  docker-compose.yml  implementation-guide.md  index.html  mkdocs.yml  objects.inv  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  sample-module-01-output.ipynb  sitemap.xml  space_server.py  tsconfig.base.json  vitest.workspace.ts
.claude/: CLAUDE.md
.claude_plans/: api-ux-review.md  architecture-review.md  bayesian_commodities_course_research.json  bayesian_commodities_course_summary.md  code-quality-review.md  comprehensive-review-2026-04-04.md  comprehensive_testing_prompt.md  conversion-test-results.md  dataiku-api-gap-analysis.md  dataiku-api-reference.md  dataiku_comprehensive_examples_prompt.md  dataiku_flow_visualization_prompt.md  dataiku_gap_analysis.md  dataiku_guide_review_report.md  enhancement-roadmap.md  enhancement_proposal.md  feature-gap-analysis.md  gap-analysis-raw.md  gap-fixes-applied.md  issues_found.md  llm-control-2026-04-26.md  m9-code-review.md  mapping-audit-results.md  optimizer-review-results.md  output-quality-results.md  py-iku-studio.md  py-iku-surface.md  py2dataiku-capability-map.md  py2dataiku_library_prompt.md  test-coverage-analysis.md  test_output.txt  test_results_report.md  todo-review.md  ultrareview-2026-04-25.md  use-case-review.md
.github/workflows/: ci.yml  corpus-rule.yml  cross-format.yml  docs.yml  llm-smoke.yml  studio-docs.yml  visual-regression.yml
api/: index.html
api/configuration/: index.html
api/core-functions/: index.html
api/enums/: index.html
api/exceptions/: index.html
api/exporters/: index.html
api/graph/: index.html
api/integration/: index.html
api/llm-providers/: index.html
api/mlops/: index.html
api/models/: index.html
api/plugins/: index.html
api/py2dataiku-class/: index.html
api/recipe-settings/: index.html
api/scenarios-metrics/: index.html
api/visualizers/: index.html
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/.py-iku-flows/: index.json
apps/api/.py-iku-flows/flows/: a0776289-ca8a-4f46-adbc-88cb200bb7f3.json
apps/api/app/: __init__.py  deps.py  errors.py  main.py  sinks.py
apps/api/app/routes/: __init__.py  audit.py  catalog.py  chat.py  comments.py  convert.py  diff.py  explain.py  export.py  flows.py  github.py  governance.py  health.py  llm_history.py  market_calendar.py  plugins.py  score.py  settings_llm.py  share.py  suggest.py  templates.py  version.py
apps/api/app/schemas/: __init__.py  audit.py  catalog.py  chat.py  convert.py  diff.py  events.py  explain.py  export.py  flow.py  flows.py  processor.py  recipe.py  suggest.py
apps/api/app/security/: __init__.py  secrets.py  share_links.py
apps/api/app/services/: __init__.py  catalog_service.py  chat.py  comments_store.py  conversion.py  cost_meter.py  explain.py  export_service.py  fixture_synthesizer.py  gdpr_export.py  github_publisher.py  lineage_service.py  lint_service.py  llm_audit.py  llm_credentials.py  plugin_marketplace.py  schema_drift.py  score.py  share_service.py  streaming.py  suggest.py  test_scaffolder.py
apps/api/app/store/: __init__.py  audit_repo.py  flows_repo.py
apps/api/tests/: __init__.py  conftest.py  test_catalog.py  test_chat.py  test_chat_force.py  test_convert_llm_confidence.py  test_convert_llm_missing_key.py  test_convert_llm_real_examples.py  test_convert_real_examples.py  test_convert_rule.py  test_convert_stream.py  test_convert_validation.py  test_cors.py  test_errors.py  test_explain.py  test_health.py  test_lineage_service.py  test_lint_service.py  test_llm_history.py  test_llm_history_search_gdpr.py  test_llm_smoke.py  test_schema_drift_service.py  test_schemas_roundtrip.py  test_settings_llm.py  test_streaming_unit.py  test_suggest.py
apps/api/tests/test_routes/: test_audit.py  test_comments.py  test_convert_budget_force.py  test_diff.py  test_export.py  test_flows.py  test_github.py  test_governance.py  test_market_calendar.py  test_plugins.py  test_score.py  test_share.py  test_share_embedded_fixtures.py  test_share_fixtures.py  test_templates.py  test_templates_round_trip.py  test_version.py
apps/api/tests/test_security/: test_secrets.py  test_share_links.py
apps/api/tests/test_sinks/: test_sinks.py
apps/api/tests/test_store/: test_audit_repo.py  test_flows_repo.py
apps/docs/: .gitignore  README.md  docusaurus.config.ts  package.json  sidebars.ts
dataiku-docs-resources/: README.md
dataiku-reference/: _inventory.json  index.html
ddods_style_guide/: DIAGRAM_STYLE_GUIDE.md  course-illustration-guide.md
design/: recipe-icons.json  tokens.json
docs/: future-dss-writeback.md  index.md  notebooks.md  package.json  testing.md
future-dss-writeback/: index.html
notebooks/: 01_beginner.ipynb  02_intermediate.ipynb  02_numpy_operations.ipynb  03_advanced.ipynb  03_sklearn_pipelines.ipynb  04_expert.ipynb  05_master.ipynb  index.html
py2dataiku/: __init__.py  cli.py  config.py  exceptions.py
py2dataiku-repo/: .gitignore  README.md  pyproject.toml  requirements-dev.txt
reference/: index.html
scripts/: e2e.sh  llm_smoke_test.py  studio_smoke_test.py
search/: search_index.json
testing/: index.html
textbook/: index.html
(+887 files in other folders)
